[package]
name = "trackup"
version = "0.1.0"
authors = ["Ashley Newson <ashleynewson@smartsim.org.uk>"]
edition = "2018"
description = "Snapshotless crash-consistent backup utility"

[dependencies]
libc = "0.2.58"
nix = "0.14.1"
crossbeam = "0.7.1"
clap = "2.33.0"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8.11"
users = "0.9.1"
byteorder = "1.3.2"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.8.1"
sha2 = "0.8.1"
blake2 = "0.8.1"
